# smiles-rendering

./: .gitignore  DATASET_GENERATION.md  README.md  generate_dataset.py  main.py  postprocessing.py  pyproject.toml  renderer.py
render_smiles/: __init__.py  main.py  options.py  postprocessing.py  renderer.py  yolo.py
smiles_segmentation/: __init__.py  coco.py  images.py  options.py  postprocessing.py
tests/: test_postprocessing.py
