[project]
name = "render-smiles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cairosvg>=2.8.2",
    "rdkit>=2025.9.1",
]

[project.scripts]
render-smiles = "render_smiles.main:main"

[dependency-groups]
dev = [
    "ruff>=0.14.0",
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 100

