[project]
name = "render-smiles"
version = "0.1.0"
description = "A Python package for rendering SMILES strings into visual molecular diagrams with fragment coloring"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cairosvg>=2.8.2",
    "rdkit>=2025.9.1",
    "svgpathtools>=1.7.1",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "ruff>=0.14.0",
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 100

